--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,6 @@
 # This file lists all individuals having contributed content to the reposit
 
 Egwim Ikechukwu
-Valentino Ugbeche
+Valentino Ogbechi
 
 
